fixed layout issues

--- a/src/website/MainPage.css
+++ b/src/website/MainPage.css
@@ -48,19 +48,17 @@ body {
 }
 
 .intro {
-  width: 100%;
-  height: 90%;
   font-family: var(--font);
   text-align: center;
   color: var(--second-color);
-  padding: 7%;
 }
 
 .container {
   display: flex;
   align-items: center;
-  margin: 5rem 0;
-  gap: 7rem;
+  max-width: 1080px;
+  margin: 10rem auto;
+  gap: 100px;
 }
 
 .container-left {
@@ -81,7 +79,6 @@ body {
   width: 100%;
   border-radius: 20%;
   transform: rotate(3deg);
-  /* border: solid 2px black; */
 }
 
 .paragraph {
@@ -115,16 +112,17 @@ body {
 .homepage-socials {
   align-items: center;
   display: flex;
-  /* justify-content: flex-start; */
   gap: 20px;
   padding-top: 30px;
 }
 
 .homepage-social-icon {
-  /* padding-right: 20px; */
   font-size: 30px;
   transition: color 0.2s ease-in-out;
-  color: white;
+}
+
+.blue {
+  color: #0072b1;
 }
 
 h1 {
@@ -137,7 +135,8 @@ h1 {
 
 .exp-container {
   display: flex;
-  padding: 0rem 5rem;
+  max-width: 1100px;
+  margin: 7rem auto;
 }
 
 .line {
@@ -179,15 +178,17 @@ h1 {
   justify-content: flex-start;
   list-style: none;
   color: #f2f2f2;
+  gap: 5px;
 }
 
 .tech-stack-items {
   background-color: #333;
-  padding: 10px;
-  margin-left: 5px;
-  border-radius: 50px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .tech-stack-items:hover {
@@ -201,20 +202,14 @@ h1 {
 
 /* Project Container */
 .project-section {
-  /* background-color: var(--yellow-color); */
   text-align: center;
-  margin: 10rem 0;
-  /* padding: 6rem 5rem; */
+  margin: 5rem 0;
 }
 
 .cards-container {
-  display: grid;
+  display: inline-grid;
   grid-template-columns: auto auto auto;
-  margin: 2rem auto;
-  width: 90%;
-  padding: 10px;
-  gap: 3rem;
-  /* padding: 6rem 5rem; */
+  gap: 30px;
 }
 
 .card {
@@ -248,18 +243,16 @@ h1 {
 
 .card-wrapper {
   position: relative;
-  width: 380px;
-  height: 450px;
+  width: 340px;
+  height: 420px;
   border-radius: 20px;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
-  /* padding: 2rem; */
 }
 
 .card-wrapper:hover {
   .image {
     filter: blur(1.4px);
-    /* transform: scale(1.5); */
     overflow: hidden;
     transition: all 0.3s linear;
     box-shadow: inset -6px -1px 32px 0px rgba(0, 0, 0, 0.75);
@@ -282,14 +275,14 @@ h1 {
 }
 
 .card-bottom {
-  width: 100%;
-  height: 100%;
+  width: 340px;
+  height: 420px;
   position: absolute;
   z-index: 20;
   display: nonee;
   top: 50%;
   background-color: rgba(178, 178, 178, 0);
-  padding: 100px 20px;
+  padding: 70px 20px;
   color: #ffffff;
   transform: translate(100%, -50%);
 }
@@ -298,11 +291,12 @@ h1 {
   font-size: 40px;
   line-height: 40px;
   font-weight: bold;
-  letter-spacing: 1px
+  letter-spacing: 1px;
+  color: yellow;
 }
 
 .bottom-text {
-  font-size: 25px;
+  font-size: 20px;
   margin-top: 20px;
 }
 
